--- a/_config.yml
+++ b/_config.yml
@@ -18,10 +18,10 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Home of the wannabe hacker
+title: Everyone wants to be a hacker
 description: >- # this means to ignore newlines until "baseurl:"
   Blog posts and other random tidbits of useful info that I want
-  to make available online.
+  to make available online. Also, Jeff Triplett said Please Publish More.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 permalink: /:year/:month/:day/:title/
