--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Everyone wants to be a hacker
+title: Everybody wants to be a hacker
 description: >- # this means to ignore newlines until "baseurl:"
   Blog posts and other random tidbits of useful info that I want
   to make available online. Also, Jeff Triplett said Please Publish More.
